--- a/css/b30gen.css
+++ b/css/b30gen.css
@@ -151,11 +151,12 @@ body {
 	transition-duration: 0.6s;
 }
 
-#Avatar:hover #iconblur{
-	transform: scale(1.4,1.4);
+#Avatar:hover #iconblur {
+	transform: scale(1.4, 1.4);
 }
-#icon:hover{
-	transform: scale(1.3,1.3);
+
+#icon:hover {
+	transform: scale(1.3, 1.3);
 }
 
 
@@ -300,12 +301,12 @@ body {
 	z-index: 7;
 }
 
-#best30{
+#best30 {
 	top: 235px;
 	left: 500px;
 }
 
-#overflow{
+#overflow {
 	top: 2020px;
 	left: 557px;
 }
@@ -593,7 +594,7 @@ body {
 	width: 470px;
 }
 
-#avatarSelect{
+#avatarSelect {
 	display: block;
 	float: left;
 	cursor: pointer;
