--- a/css/b30gen.css
+++ b/css/b30gen.css
@@ -68,7 +68,7 @@ body {
 	height: 240px;
 	width: 500px;
 	float: left;
-	display: inline-block;
+	display: block;
 	/*border: 2px solid black;*/
 }
 
