--- a/css/b30gen.css
+++ b/css/b30gen.css
@@ -596,7 +596,8 @@ body {
 }
 
 #avatarSelect {
-	display: block;
+	position: relative;
+	display: inline-block;
 	float: left;
 	cursor: pointer;
 	scrollbar-width: none;
@@ -612,27 +613,27 @@ body {
 	margin-left: 12px;
 	transition-duration: 0.5s;
 	float: left;
+	z-index: 100;
 }
-
-
 
 #sheet {
-	position: absolute;
-	left: 1100px;
+	position: relative;
+	left: 0px; /* 965 */
 	top: 20px;
 	display: none;
-	opacity: 0%;
+	opacity: 0;
 	overflow-x: hidden;
 	height: 480px;
-	width: 460px;
+	width: 478px;
 	background-color: paleturquoise;
+	line-height: 0px;
 	transition-duration: 0.35s;
 	scrollbar-width: none;
-	-ms-overflow-style: none; /* IE 10+ */
+	-ms-overflow-style: none; 
 }
-#sheet::-webkit-scrollbar {
-  display: none; /* Chrome Safari */
-}
+ #sheet::-webkit-scrollbar {
+  display: none; 
+} 
 
 .selectImage {
 	display: block;
