--- a/css/b30gen.css
+++ b/css/b30gen.css
@@ -628,12 +628,12 @@ body {
 	background-color: paleturquoise;
 	line-height: 0px;
 	transition-duration: 0.35s;
-	scrollbar-width: none;
-	-ms-overflow-style: none; 
+	/* scrollbar-width: none; */
+	/* -ms-overflow-style: none; */
 }
- #sheet::-webkit-scrollbar {
+/* #sheet::-webkit-scrollbar {
   display: none; 
-} 
+} */
 
 .selectImage {
 	display: block;
