--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,12 @@
-body{
+body {
 	width: 1000px;
 	margin: 0 auto;
 	border-radius: 15px;
-	background-color: rgba(fe,ef,ef,1);
-	
+	background-color: rgba(fe, ef, ef, 1);
+
 }
-#bgimg img{
+
+#bgimg img {
 	display: block;
 	position: fixed;
 	z-index: -99;
@@ -15,42 +16,44 @@ body{
 	-webkit-filter: blur(1px);
 }
 
-#noticeButton{
+#noticeButton {
 	width: 150px;
 	cursor: pointer;
 	transition-duration: 0.3s;
 }
-#noticeButton:hover{
-	transform: scale(1.3,1.3);
+
+#noticeButton:hover {
+	transform: scale(1.3, 1.3);
 }
 
-h1{
+h1 {
 	margin-left: 15px;
 }
 
-#notices{
+#notices {
 	margin-left: 15px;
 	font-size: 20px;
 	transition-duration: 0.3s;
-	
+
 }
 
-#bili{
+#bili {
 	width: 800px;
 	height: 450px;
 }
 
-#controller{
+#controller {
 	line-height: 100px;
 	font-size: 30px;
 	display: inline-block;
 	align-items: center;
 }
 
-#uploadButton, #download {
+#uploadButton,
+#download,
+#sendToB30 {
 	position: relative;
-	margin: 25px;
-	width: 450px;
+	margin: 16px;
 	height: 120px;
 	font-size: 25px;
 	font-weight: 500;
@@ -64,7 +67,18 @@ h1{
 	transition-duration: 0.3s;
 }
 
-#b30gen, #difgen{
+#uploadButton{
+	width: 450px;
+}
+
+#download, #sendToB30{
+	width: 300px;
+	background-size: 100%;
+	background-position: center;
+}
+
+#b30gen,
+#difgen {
 	color: aliceblue;
 	position: relative;
 	margin: 25px;
@@ -80,21 +94,28 @@ h1{
 	float: left;
 	cursor: pointer;
 	transition-duration: 0.3s;
-	
+
 }
-#b30gen:hover,#difgen:hover,#uploadButton:hover,#download:hover{
-	transform: scale(1.1,1.1);
+
+#b30gen:hover,
+#difgen:hover,
+#uploadButton:hover,
+#download:hover,
+#sendToB30:hover {
+	transform: scale(1.1, 1.1);
 }
+
 td {
 	text-align: left;
 	margin: 5px;
 	font-size: 18px;
 }
 
-table{
+table {
 	border-radius: 8px;
-	border: 3px rgba(80,80,80,0.5) solid;
+	border: 3px rgba(80, 80, 80, 0.5) solid;
 }
-#queryResult{
+
+#queryResult {
 	display: none;
 }
