--- a/css/b30gen.css
+++ b/css/b30gen.css
@@ -22,8 +22,42 @@ body {
 	width: 1700px;
 	height: 3150px;
 	margin: 0;
-	/* 	overflow-x: hidden; */
 	/* transition-duration: 1.0s; */
+}
+
+#mainCapture{
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	overflow-x: hidden;
+	overflow-y: hidden;
+}
+
+#mainCover{
+	background-color: rgba(0,0,0,0.75);
+	width: inherit;
+	height: 1700px;
+	position: fixed;
+	z-index: 999;
+	transition-duration: 0.5s;
+	opacity: 0;
+	display: none;
+}
+
+#loadingGif{
+	position: relative;
+	height: 64px;
+	left: 50%;
+	top: 20%;
+	scale: 1.5;
+}
+
+#loadingNotice{
+	position: relative;
+	float: left;
+	color: aliceblue; 
+	text-align: center; 
+	top: 25%;
 }
 
 #container {
@@ -513,7 +547,7 @@ body {
 	position: absolute;
 	font-size: 30px;
 	line-height: 32px;
-	z-index: 8;
+	z-index: 100;
 	column-count: 3;
 	column-gap: 0px;
 	transition-duration: 0.35s;
@@ -535,7 +569,7 @@ body {
 	margin-bottom: 4px;
 	float: left;
 	width: 99%;
-	height: 317px;
+	height: 325px;
 	overflow: auto;
 	border: 2px solid gold;
 	background-color: gainsboro;
