--- a/css/b30gen.css
+++ b/css/b30gen.css
@@ -74,6 +74,7 @@ body {
 	z-index: -999;
 	transition-duration: 0.25s;
 	opacity: 100%;
+	animation: divBlur forwards 0.5s;
 }
 
 #partner {
@@ -173,14 +174,16 @@ body {
 	left: 20px;
 	top: 20px;
 	transition-duration: 0.6s;
+	
 }
 
 #Avatar:hover #iconblur {
-	transform: scale(1.4, 1.4);
+	transform: scale(1.3, 1.3);
 }
 
 #icon:hover {
 	transform: scale(1.3, 1.3);
+	animation: divBlur forwards 0.5s;
 }
 
 
@@ -356,6 +359,20 @@ body {
 .singlePTT:hover {
 	transform: scale(1.21, 1.21);
 	z-index: 9999;
+	animation: divBlur forwards 0.5s;
+}
+
+@keyframes divBlur {
+	0% {
+		filter: blur(0px);
+	}
+	20%{
+		filter: blur(15px);
+	}
+	100%{
+		filter: blur(0px);
+	}
+	
 }
 
 .realDiffInfo {
