--- a/css/divgen.css
+++ b/css/divgen.css
@@ -9,6 +9,18 @@
 	src: url("../Fonts/Exo-SemiBold.ttf");
 }
 
+@keyframes divBlur {
+	0% {
+		filter: blur(0px);
+	}
+	20%{
+		filter: blur(15px);
+	}
+	100%{
+		filter: blur(0px);
+	}
+	
+}
 
 * {
 	margin: 0;
@@ -80,6 +92,7 @@ body {
 	position: absolute;
 	/*-webkit-filter: blur(5px);*/
 	z-index: -999;
+	animation: divBlur forwards 0.5s;
 }
 
 #notice {
@@ -192,6 +205,7 @@ body {
 
 #icon:hover {
 	transform: scale(1.3, 1.3);
+	animation: divBlur forwards 0.4s;
 }
 
 
@@ -437,6 +451,7 @@ body {
 .singlePTT:hover{
 	z-index: 100;
 	transform: scale(1.3);
+	animation: divBlur forwards 0.6s;
 }
 
 /* .singlePTT:nth-child(odd):hover{
@@ -762,4 +777,5 @@ button {
 
 .selectImage:hover {
 	transform: scale(1.5, 1.5);
+	
 }
