添加读取缓存按钮

--- a/css/index.css
+++ b/css/index.css
@@ -76,7 +76,8 @@ body {
 
 #uploadButton,
 #download,
-#sendToB30{
+#sendToB30,
+#edit{
 	background: url(../img/btn-accept-zh-Hans.png);
 }
 
@@ -92,7 +93,8 @@ body {
 #difgen:hover,
 #uploadButton:hover,
 #download:hover,
-#sendToB30:hover {
+#sendToB30:hover,
+#edit:hover{
 	transform: scale(1.1, 1.1);
 }
 
