分级查曲每0.1定数一分割，改进了高度计算方式，更加精确了

--- a/css/divgen.css
+++ b/css/divgen.css
@@ -93,6 +93,7 @@ body {
 	/*-webkit-filter: blur(5px);*/
 	z-index: -999;
 	animation: divBlur forwards 0.5s;
+	transition-duration: 0.35s;
 }
 
 #notice {
@@ -426,8 +427,8 @@ body {
 	display: block;
 	/* 
 	line-height: 15px; */
-	margin-top: 5px;
-	margin-bottom: 70px;
+	/* margin-top: 5px;*/
+	margin-bottom: 20px; 
 }
 
 .singlePTT {
