--- a/css/b30gen.css
+++ b/css/b30gen.css
@@ -197,7 +197,7 @@ body {
 	left: 20px;
 	top: 20px;
 	transition-duration: 0.6s;
-	
+	scale: 1.2;
 }
 
 #Avatar:hover #iconblur {
@@ -537,6 +537,18 @@ body {
 .rank a {
 	width: 100%;
 	text-align: center;
+}
+
+.singlePTT:first-child .rank{
+	background-color: rgba(255,202,1,1.0);
+}
+
+.singlePTT:nth-child(2) .rank{
+	background-color: rgba(175, 175, 175, 1.0);
+}
+
+.singlePTT:nth-child(3) .rank{
+	background-color: rgba(165,124,80,1.0);
 }
 
 .songRank {
