尝试在本地缓存更多信息。将曲绘、背景保存到localStorage中加快加载速度

--- a/css/b30gen.css
+++ b/css/b30gen.css
@@ -576,7 +576,7 @@ body {
 
 #controller {
 	margin: auto;
-	height: 560px;
+	height: 570px;
 	width: 1450px;
 	left: 150px;
 	top: 300px;
@@ -610,7 +610,7 @@ body {
 	float: left;
 	width: 99%;
 	height: 325px;
-	overflow: auto;
+	overflow: hidden;
 	border: 2px solid gold;
 	background-color: gainsboro;
 }
