添加头部数据散点图

--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@ body {
 #noticeButton {
 	font-size: 60px;
 	position: relative;
-	left: 50px;
+	left: 8%;
 	width: 300px;
 	cursor: pointer;
 	transition-duration: 0.3s;
@@ -41,7 +41,7 @@ body {
 	list-style: none;
 }
 
-#notices li{
+#notices li {
 	text-align: center;
 }
 
@@ -55,10 +55,19 @@ body {
 #controller {
 	line-height: 100px;
 	font-size: 30px;
-	display: inline-block;
 	align-items: center;
 }
-#controller button{
+
+#controllerRow1,
+#controllerRow2,
+#controllerRow3 {
+	display: flex;
+	justify-content: space-between;
+	width: 80%;
+	margin: 0 auto;
+}
+
+#controller button {
 	position: relative;
 	margin: 16px;
 	width: 450px;
@@ -77,8 +86,8 @@ body {
 #uploadButton,
 #download,
 #sendToB30,
-#edit{
-	background: url(../img/btn-accept-zh-Hans.png);
+#edit {
+	background: url(../img/btn-accept-zh-Hans.png) center center;
 }
 
 
@@ -87,7 +96,7 @@ body {
 #dldbtn {
 	color: aliceblue;
 	position: relative;
-	background: url(../img/btn-refuse-zh-Hans.png);
+	background: url(../img/btn-refuse-zh-Hans.png) center center;
 }
 
 #b30gen:hover,
@@ -100,7 +109,7 @@ body {
 	transform: scale(1.1, 1.1);
 }
 
-th{
+th {
 	font-size: 20px;
 }
 
@@ -118,7 +127,7 @@ tr {
 }
 
 table {
-	width: 1500px;
+	width: 80%;
 	margin: 0 auto;
 	border-radius: 8px;
 	border: 3px rgba(80, 80, 80, 0.5) solid;
@@ -128,17 +137,30 @@ table {
 	display: none;
 }
 
-.rowActions{
+.rowActions {
 	height: 100%;
 	line-height: 100%;
 }
 
-.addRow, .deleteRow{
+.addRow,
+.deleteRow {
 	height: 100%;
 	border: solid 1px black;
 	border-radius: 5px;
 }
 
-tbody:first-child{
+tbody:first-child {
 	border-radius: 15px;
+}
+
+#chartContainer{
+	display: none;
+}
+
+#chart {
+	width: 100%;
+	background-color: white;
+	margin: 0 auto;
+	box-sizing: border-box;
+	font-weight: 800;
 }
